--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,24 @@ body {
   margin: 0 33px;
 }
 
+.header-right__cart {
+  position: relative;
+}
+
+.header-right-cart__count {
+  position: absolute;
+  top: -25px;
+  left: 22px;
+  font-weight: 400;
+  text-transform: none;
+  font-size: 12px;
+  color: #ffffff;
+  line-height: 14px;
+  padding: 5px 8px;
+  background: #f16d7f;
+  border-radius: 50%;
+}
+
 .header-drop__close {
   text-align: right;
   padding: 16px 16px 8px;
@@ -449,7 +467,10 @@ body {
 }
 
 .card-hover {
-  display: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  opacity: 0;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -webkit-box-align: center;
@@ -679,6 +700,112 @@ body {
   100% {
     left: 0;
   }
+}
+
+@-webkit-keyframes bip-bip {
+  0% {
+    left: 0;
+    bottom: 0;
+  }
+  25% {
+    left: 125px;
+    bottom: 0;
+  }
+  50% {
+    left: 0;
+    bottom: 0;
+  }
+  75% {
+    left: -125px;
+    bottom: 0;
+  }
+  100% {
+    left: 0;
+    bottom: 0;
+  }
+}
+
+@keyframes bip-bip {
+  0% {
+    left: 0;
+    bottom: 0;
+  }
+  25% {
+    left: 125px;
+    bottom: 0;
+  }
+  50% {
+    left: 0;
+    bottom: 0;
+  }
+  75% {
+    left: -125px;
+    bottom: 0;
+  }
+  100% {
+    left: 0;
+    bottom: 0;
+  }
+}
+
+@-webkit-keyframes rot-bip {
+  50% {
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+  }
+}
+
+@keyframes rot-bip {
+  50% {
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+  }
+}
+
+@-webkit-keyframes rot-disc {
+  0% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes rot-disc {
+  0% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes rot-crown {
+  0% {
+    -webkit-transform: rotateY(360deg);
+            transform: rotateY(360deg);
+  }
+}
+
+@keyframes rot-crown {
+  0% {
+    -webkit-transform: rotateY(360deg);
+            transform: rotateY(360deg);
+  }
+}
+
+.car-bip {
+  position: relative;
+  -webkit-animation: bip-bip 5s linear forwards infinite, rot-bip 5s cubic-bezier(0.42, 0.07, 0.5, 0.91) infinite;
+          animation: bip-bip 5s linear forwards infinite, rot-bip 5s cubic-bezier(0.42, 0.07, 0.5, 0.91) infinite;
+}
+
+.feature-item__svg--path {
+  -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+  -webkit-animation: rot-disc 5s linear infinite;
+          animation: rot-disc 5s linear infinite;
+}
+
+.rot-crown {
+  -webkit-animation: rot-crown 3s linear infinite;
+          animation: rot-crown 3s linear infinite;
 }
 
 .arrivals {
@@ -1252,7 +1379,10 @@ body {
 }
 
 .shopping-card__close {
+  height: 11px;
   margin-left: 30px;
+  margin-right: 20px;
+  background: none;
   cursor: pointer;
 }
 
@@ -1626,9 +1756,7 @@ body {
             filter: brightness(0.4);
   }
   .filter-card:hover .card-hover {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    opacity: 1;
   }
   .checkbox-hover:hover {
     color: #f16d7f;
@@ -1636,10 +1764,6 @@ body {
   .scale:hover {
     -webkit-transform: scale(1.2);
             transform: scale(1.2);
-  }
-  .rotate:hover {
-    -webkit-transform: rotateY(180deg);
-            transform: rotateY(180deg);
   }
 }
 
@@ -2226,7 +2350,7 @@ body {
 
 @media all and (max-width: 1100px) {
   .shopping-card__close {
-    margin: 22px 0 0 125px;
+    margin: 22px 20px 0 125px;
   }
 }
 
