--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -96,7 +96,7 @@
          filter: brightness(0.4);
       }
       .card-hover {
-         display: flex;
+         opacity: 1;
       }
    }
    // Hover for checkbox
@@ -105,10 +105,6 @@
    }
    .scale:hover {
       transform: scale(1.2);
-   }
-   // Hover rotate
-   .rotate:hover {
-      transform: rotateY(180deg);
    }
 }
 
@@ -569,7 +565,7 @@
       }
       &-card__close {
          @media (max-width: $level_1) {
-            margin: 22px 0 0 125px;
+            margin: 22px 20px 0 125px;
          }
          @media (max-width: $level_5) {
             margin-top: 13px;
