--- a/css/style.css
+++ b/css/style.css
@@ -1157,7 +1157,8 @@ body {
   font-weight: 300;
   font-size: 14px;
   color: #5e5e5e;
-  max-width: 555px;
+  line-height: 17px;
+  max-width: 550px;
   margin: 48px auto 32px;
 }
 
@@ -1204,6 +1205,14 @@ body {
   background: url("../img/catalog/arrow.png") right center no-repeat;
   padding-right: 25px;
   margin-right: 30px;
+}
+
+.product-sort__details .mr-0 {
+  margin-right: 0;
+}
+
+.product-sort__details[open] .mr-0 {
+  margin-right: 0;
 }
 
 .product-sort__summary {
@@ -1286,6 +1295,10 @@ body {
 .product-sort__button-svg {
   margin-right: 23px;
   fill: #f16d7f;
+}
+
+.mt-129 {
+  margin-top: 129px;
 }
 
 .shopping {
@@ -2017,6 +2030,12 @@ body {
   }
 }
 
+@media all and (max-width: 900px) {
+  .subscribe {
+    background-position: 27% bottom;
+  }
+}
+
 @media all and (max-width: 1000px) {
   .subscribe__wrap {
     -ms-flex-pack: distribute;
@@ -2468,5 +2487,81 @@ body {
 @media all and (max-width: 450px) {
   .shopping-totalcost__button {
     padding: 14px 6px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .product-karusel__img img {
+    width: 100%;
+  }
+}
+
+@media all and (max-width: 900px) {
+  .product-preview__description {
+    top: 0;
+    border-bottom: 1px solid #eaeaea;
+    border-top: 1px solid #eaeaea;
+    background: #ffffff;
+    padding-top: 65px;
+    padding-bottom: 65px;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .product-description__info {
+    padding-bottom: 32px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .product-description__info {
+    border-bottom: none;
+    position: relative;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .product-description__info::after {
+    content: "";
+    position: absolute;
+    top: 278px;
+    left: 50%;
+    -webkit-transform: translate(-50%);
+            transform: translate(-50%);
+    width: 47%;
+    height: 1px;
+    background: #eaeaea;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .product-description__text {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .product-description__text {
+    line-height: 20px;
+    margin-top: 32px;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .product-sort__summary {
+    font-size: 10px;
+  }
+}
+
+@media all {
+  .product-description__sort {
+    margin-top: 49px;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .product .mt-129 {
+    margin-top: 64px;
   }
 }
