--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -308,6 +308,9 @@
 
    // Media for subscribe
    .subscribe {
+      @media (max-width: $level_3) {
+         background-position: 27% bottom;
+         }
       &__wrap {
          @media (max-width: $level_2) {
             justify-content: space-around;
@@ -652,6 +655,75 @@
       &-totalcost__button {
          @media (max-width: $level_7) {
             padding: 14px 6px;
+         }
+      }
+   }
+}
+
+// Media for PRODUCT
+
+@media all {
+   .product {
+      &-karusel__img img {
+         @media (max-width: $level_5) {
+            width: 100%;
+         }
+      }
+      &-preview__description {
+         @media (max-width: $level_3) {
+            top: 0;
+            border-bottom: 1px solid #eaeaea;
+            border-top: 1px solid #eaeaea;
+            background: #ffffff;
+            padding-top: 65px;
+            padding-bottom: 65px;
+         }
+      }
+
+      // Product description
+      &-description__info {
+         @media (max-width: $level_7) {
+            padding-bottom: 32px;
+         }
+         @media (max-width: $level_5) {
+            border-bottom: none;
+            position: relative;
+         }
+      }
+      &-description__info::after {
+         @media (max-width: $level_5) {
+            content: "";
+            position: absolute;
+            top: 278px;
+            left: 50%;
+            transform: translate(-50%);
+            width: 47%;
+            height: 1px;
+            background: #eaeaea;
+         }
+      }
+      &-description__text {
+         @media (max-width: $level_6) {
+            padding-left: 10px;
+            padding-right: 10px;
+         }
+         @media (max-width: $level_7) {
+            line-height: 20px;
+            margin-top: 32px;
+         }
+      }
+      &-sort__summary {
+         @media (max-width: $level_7) {
+            font-size: 10px;
+         }
+      }
+      &-description__sort {
+         margin-top: 49px;
+      }
+      // Product
+      .mt-129 {
+         @media (max-width: $level_7) {
+            margin-top: 64px;
          }
       }
    }
